# cp2k-spm-tools

./: .gitignore  .pre-commit-config.yaml  Gaussians.nb  LICENSE  README.md  bader_bond_order.py  cnt_extract_pictures.sh  cp2k_stm_utilities.py  cp2k_utilities.py  crop_orbs_wfn.py  cube_file_from_molog-2-pbc.ipynb  cube_file_from_restart.ipynb  cube_file_from_restart_wfn.ipynb  cube_from_wfn.py  cube_in_region.ipynb  cube_operations.py  cube_single_column.py  cube_split.py  evaluate_morbs_in_box_mpi.py  evaluate_morbs_on_grid_mpi.py  ftsts_1d_ldos_from_npz.py  ftsts_analysis.ipynb  hartree_analysis.ipynb  hrstm_from_wfn.py  ldos_postproc.ipynb  ldos_postproc.py  neb_convergence_analysis.ipynb  optical_transitions.ipynb  orbital_analysis_from_npz.py  overlap_calc_mpi.py  overlap_from_wfns.py  overlap_viewer.ipynb  pyproject.toml  qe_utils.py  run_evaluate_morbs_in_box.sh  run_morb_selec.sh  run_stm_sts_from_npz.sh  run_sts.sh  stm_sts_extrap_from_npz.ipynb  stm_sts_extrap_from_npz.py  (+7 more)
atomistic_tools/: bader_wrapper.py  common.py  cp2k_ftsts.py  cp2k_grid_orbitals.py  cp2k_overlap_matrix.py  cp2k_stm_sts.py  cp2k_stm_utilities.py  cp2k_utilities.py  cp2k_utils.py  cp2k_wfn_file.py  cube.py  cycles.py  igor.py  qe_utils.py
benchmarks/: stm_with_extrapolation-12mol_7agnr.ipynb  stm_with_extrapolation-anthracene.ipynb
cp2k_spm_tools/: __init__.py  bader_wrapper.py  common.py  cp2k_ftsts.py  cp2k_grid_orbitals.py  cp2k_overlap_matrix.py  cp2k_stm_sts.py  cp2k_utils.py  cp2k_wfn_file.py  cube.py  cube_utils.py  cycles.py  igor.py  qe_utils.py
cube_file_from_molog_history/: cube_file_from_molog-2-pbc-backup.ipynb  cube_file_from_molog-2.ipynb  cube_file_from_molog-3-interp.ipynb  cube_file_from_molog-3.ipynb  cube_file_from_molog.ipynb
examples/: clean_all_examples.sh  example.py  run_all_examples.sh
history/: convert_restart-wfn_to_ascii.py  converting_restart_to_and_from_ascii.ipynb  dario_replication.ipynb  evaluate_morbs_in_box.py  plotting_test.ipynb  select_morbs_restart-wfn.py  stm_sts_with_morb_evaluation_in_box.ipynb
hrstm_tools/: cp2k_grid_matrix.py  hrstm.py  hrstm_utils.py  interpolator.py  ppstm_grid_orbitals.py  tip_coeffs.py
notebooks/: ftsts_analysis.ipynb  overlap_viewer.ipynb  stm_viewer.ipynb
older_scripts/: pickle_restart-wfn.py
sts_from_molog_history/: molog_loading_utils-backup.py  molog_loading_utils.py  sts_from_molog-backup0211.ipynb  sts_from_molog-pbc-testing.ipynb  sts_from_molog-simple-pbc-slow.ipynb  sts_from_molog_backup.ipynb
submission_scripts/: extract_pictures.sh  run_evaluate_morbs_in_box.sh  run_evaluate_morbs_in_box_mpi.sh  run_evaluate_morbs_in_box_mpi_DAINT.sh  run_evaluate_morbs_in_box_mpi_MARCONI.sh  run_evaluate_morbs_on_grid_mpi_DAINT.sh  run_ftsts_1d_ldos.sh  run_ldos_postproc.sh  run_orbital_analysis.sh  run_overlap_mpi_DAINT.sh  (+8 more)
(+136 files in other folders)
