[project]
name = "cp2k-spm-tools"
description = "CP2K Scanning Probe Microscopy tools."
version = "1.4.4"

dependencies = [
  "numpy >= 1.22, < 2",
  "scipy >= 1.10, < 2",
  "ase >= 3.15, < 4",
  "matplotlib >= 3.0, < 4",
  "mpi4py > 3.1",
]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[tool.setuptools]
packages = ["cp2k_spm_tools"]

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501", "E741", "E722"]
